--- a/Olist.ipynb
+++ b/Olist.ipynb
@@ -80,7 +80,6 @@
     "\n",
     "print(\"加载数据（使用逗号分隔符）...\")\n",
     "\n",
-    "# 使用逗号作为分隔符重新加载数据\n",
     "df = pd.read_csv(\n",
     "    'olist_analysis_complete.csv',\n",
     "    encoding='utf-8',\n",
@@ -89,7 +88,6 @@
     "    low_memory=False\n",
     ")\n",
     "\n",
-    "# 检查数据加载后是否成功\n",
     "if df.shape[1] > 1:\n",
     "    print(\" 数据加载成功！\")\n",
     "    print(f\"📏 数据集形状: {df.shape}\")\n",
@@ -106,13 +104,13 @@
     "# 1. 转换 order_purchase_timestamp 列为 datetime 类型\n",
     "df['order_purchase_timestamp'] = pd.to_datetime(df['order_purchase_timestamp'], errors='coerce')\n",
     "\n",
-    "# 2. 转换 order_date 列为 datetime 类型（如果需要）\n",
+    "# 2. 转换 order_date 列为 datetime 类型\n",
     "df['order_date'] = pd.to_datetime(df['order_date'], errors='coerce')\n",
     "\n",
-    "# 3. 确保 order_month 列为 int64 类型（如果需要）\n",
+    "# 3. 确保 order_month 列为 int64 类型\n",
     "df['order_month'] = df['order_month'].astype(int)\n",
     "\n",
-    "# 4. 确保 order_year 列为 int64 类型（如果需要）\n",
+    "# 4. 确保 order_year 列为 int64 类型\n",
     "df['order_year'] = df['order_year'].astype(int)\n",
     "\n",
     "# 5. 将 review_score 列中的 0 转换为 NaN\n",
